--- a/src/components/UI/Notification.module.css
+++ b/src/components/UI/Notification.module.css
@@ -1,6 +1,6 @@
 .notification {
     width: 100%;
-    height: 3rem;
+    /* height: 3rem; */
     background-color: #1a8ed1;
     display: flex;
     justify-content: space-between;
